Scripts to provide build/dev/prod enviornment within Docker Add test coverage

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ redblackgraph.egg-info/
 redblackgraph/sparsetools/CMakeLists.txt
 _sparsetools.cpython-36m-darwin.so
 redblackgraph/sparsetools/cmake-build-debug/
+.coverage
