--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-numpy==1.12.1
-scipy==0.19.0
-wheel==0.29.0
-pytest==3.0.7
-pytest-cov==2.4.0
+numpy==1.13.2
+scipy==1.0.0b1
+jupyter==1.0.0
+matplotlib==2.1.0rc1
+sympy==1.1.1
+wheel==0.30.0
+pytest==3.2.2
+pytest-cov==2.5.1
 
