--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-numpy==1.13.2
-scipy==1.0.0b1
-hide_code==0.3.0
+numpy==1.13.3
+scipy==1.0.0rc1
 jupyter==1.0.0
 jupyter_contrib_nbextensions==0.3.1
 jupyter_nbextensions_configurator==0.2.7
