add option to run notebook directly in dev container move notebook to notebooks directory

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ _sparsetools.cpython-36m-darwin.so
 redblackgraph/sparsetools/cmake-build-debug/
 .coverage
 _sparsetools.cpython-36m-x86_64-linux-gnu.so
-redblackgraph/.ipynb_checkpoints/
+notebooks/.ipynb_checkpoints/
