--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 cython==0.26.1
-git+git://github.com/rappdw/numpy.git@5067a7e41edbf0e8fd0084a9f737f04cb5e076b7#egg=numpy
-#scipy==1.0.0rc1
+numpy==1.13.3
+scipy==1.0.0
+#git+git://github.com/rappdw/numpy.git@5067a7e41edbf0e8fd0084a9f737f04cb5e076b7#egg=numpy
 
