--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ _sparsetools.cpython-36m-x86_64-linux-gnu.so
 notebooks/.ipynb_checkpoints/
 redblackgraph/core/src/multiarray/redblack.c
 redblackgraph/__config__.py
+redblackgraph/rb_multiarray.*.so
+redblackgraph/rb_sparsetools.*.so
