--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ notebooks/.ipynb_checkpoints/
 redblackgraph/core/src/multiarray/redblack.c
 redblackgraph/core/src/multiarray/rbg_math.c
 redblackgraph/core/src/multiarray/rbg_math.h
+redblackgraph/core/src/multiarray/relational_composition.c
 redblackgraph/core/src/multiarray/warshall.c
 redblackgraph/__config__.py
 redblackgraph/rb_multiarray.*.so
