--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ redblackgraph/core/src/multiarray/warshall.c
 redblackgraph/__config__.py
 redblackgraph/rb_multiarray.*.so
 redblackgraph/rb_sparsetools.*.so
+redblackgraph/tests/resources/results.csv
