Get initial test coverage

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ redblackgraph/__config__.py
 redblackgraph/rb_multiarray.*.so
 redblackgraph/rb_sparsetools.*.so
 redblackgraph/tests/resources/results.csv
+_version.py.bld
