Test coverage, fix but in __rmatmul__

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,6 @@ redblackgraph/core/src/multiarray/warshall.c
 redblackgraph/__config__.py
 redblackgraph/rb_multiarray.*.so
 redblackgraph/rb_sparsetools.*.so
-redblackgraph/tests/resources/results.csv
+redblackgraph/tests/resources/closure.results.csv
+redblackgraph/tests/resources/composition.results.csv
 _version.py.bld
