--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -62,6 +62,11 @@ RUN mkdir /home/$NB_USER/work && \
 USER root
 EXPOSE 8888
 
+RUN wget https://github.com/jgm/pandoc/releases/download/2.0.5/pandoc-2.0.5-1-amd64.deb \
+    && dpkg -i pandoc-2.0.5-1-amd64.deb \
+    && rm pandoc-2.0.5-1-amd64.deb
+
+ADD docker/notebook/convert.sh /usr/local/bin
 
 # As the entry point, install an editable version into the python environment and then
 # start the shell
