Update to work with latest docker-ds notebook

--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -1,9 +1,8 @@
-FROM docker-ds-notebook:drapp
+FROM rappdw/docker-ds:latest
 
 ADD requirements.txt /tmp/requirements.txt
 
-RUN python -m venv --system-site-packages .venvs/notebook \
-    && /bin/bash -c "source /home/jovyan/.venvs/notebook/bin/activate; pip install -r /tmp/requirements.txt" \
+RUN /bin/bash -c "source /home/jovyan/.venvs/notebook/bin/activate; pip install -r /tmp/requirements.txt" \
     && ln -s /workdir/notebooks notebooks
 
 # install an editable version into the python module and then, start the jupyter server
