--- a/docker/dockerutils.cfg
+++ b/docker/dockerutils.cfg
@@ -1,6 +1,7 @@
 [notebook]
 volumes=-v {project_root}:/workdir -v /data:/data --mount type=bind,source=/Users/{user}/.aws,target=/project_root/.aws
 ports=-p 8888:8888
+#cmd=/bin/bash
 
 [numba]
 volumes=-v {project_root}:/workdir -v /data:/data --mount type=bind,source=/Users/{user}/.aws,target=/project_root/.aws
