A couple updates to the notebook docker image Change the Experiments notebook to use a smaller graph, add eigenvector analysis

--- a/docker/dockerutils.cfg
+++ b/docker/dockerutils.cfg
@@ -1,5 +1,5 @@
 [notebook]
-volumes=-v {project_root}:/workdir -v /data:/data --mount type=bind,source=/Users/{user}/.aws,target=/project_root/.aws
+volumes=-v {project_root}:/home/jovyan/redblackgraph -v /data:/data --mount type=bind,source=/Users/{user}/.aws,target=/home/jovyan/.aws
 ports=-p 8888:8888
 #cmd=/bin/bash
 
