Utilize latest version of ds notebook

--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -2,11 +2,12 @@ FROM rappdw/docker-ds:latest
 
 ADD requirements.txt /tmp/requirements.txt
 ADD docker/notebook/gen-latex.* /usr/local/bin/
+ADD docker/notebook/start-redblack-notebook.sh /usr/local/bin
 
-RUN /bin/bash -c "source /home/jovyan/.venvs/notebook/bin/activate; pip install -r /tmp/requirements.txt" \
+RUN . /home/jovyan/.venvs/notebook/bin/activate \
+    && pip install -r /tmp/requirements.txt \
     && mkdir -p /home/jovyan/.jupyter/custom
 
 ADD docker/notebook/custom.css /home/jovyan/.jupyter/custom
 
-# install an editable version into the python module and then, start the jupyter server
-CMD /bin/bash -c "source /home/jovyan/.venvs/notebook/bin/activate; pip install -e /home/jovyan/redblackgraph/; start-notebook.sh"
+CMD start-redblack-notebook.sh
