Minor changes to notebooks Update notebook docker image to use latest form of rappdw/docker-ds

--- a/docker/dockerutils.cfg
+++ b/docker/dockerutils.cfg
@@ -1,6 +1,10 @@
 [notebook]
-volumes=-v {project_root}:/home/jovyan/redblackgraph -v /data:/data --mount type=bind,source=/Users/{user}/.aws,target=/home/jovyan/.aws
+volumes=-v {project_root}:/home/jovyan/project -v /data:/data --mount type=bind,source=/Users/{user}/.aws,target=/home/jovyan/.aws
 ports=-p 8888:8888
+env=lab
 
 [numba]
 volumes=-v {project_root}:/workdir -v /data:/data --mount type=bind,source=/Users/{user}/.aws,target=/project_root/.aws
+
+[lab]
+NOTEBOOK_MODE=lab
