--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -1,13 +1,14 @@
-FROM rappdw/docker-ds:latest
+FROM rappdw/docker-ds
 
+USER root
 ADD requirements.txt /tmp/requirements.txt
 ADD docker/notebook/gen-latex.* /usr/local/bin/
 ADD docker/notebook/start-redblack-notebook.sh /usr/local/bin
 
-RUN . /home/jovyan/.venvs/notebook/bin/activate \
-    && pip install -r /tmp/requirements.txt \
+RUN pip install -r /tmp/requirements.txt \
     && mkdir -p /home/jovyan/.jupyter/custom
 
 ADD docker/notebook/custom.css /home/jovyan/.jupyter/custom
 
-CMD start-redblack-notebook.sh
+USER $NB_USER
+CMD start-project-notebook.sh
