A number of changes including: * adding tests * some type hinting * updating docker images * fixes/updates to linting & test script * updating requirements to latest numpy

--- a/docker/dockerutils.cfg
+++ b/docker/dockerutils.cfg
@@ -8,3 +8,7 @@ volumes=-v {project_root}:/workdir -v /data:/data --mount type=bind,source=/User
 
 [lab]
 NOTEBOOK_MODE=lab
+
+[jenkins]
+volumes=-v {project_root}/dist:/workdir/dist -v {project_root}/.git:/workdir/.git:ro -v /data:/data -v {project_root}/_testing_output:/workdir/_testing_output
+cmd=/bin/bash
