--- a/.dockerignore
+++ b/.dockerignore
@@ -9,3 +9,4 @@ dist
 _sparsetools.cpython-36m-darwin.so
 _sparsetools.cpython-36m-x86_64-linux-gnu.so
 redblackgraph/.ipynb_checkpoints
+.pytest_cache
