--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -1,14 +1,15 @@
 FROM rappdw/docker-ds:cpu-only
 
-ADD requirements.txt /tmp/requirements.txt
 ADD docker/notebook/gen-latex.* /usr/local/bin/
 
-RUN chmod 1777 /tmp \
-    && apt-get update && apt-get install --no-install-recommends --allow-unauthenticated -y \
-    pandoc \
-    && pip install -r /tmp/requirements.txt \
-    && mkdir -p /home/jovyan/.jupyter/custom \
-    && fix-permissions /home/jovyan/.jupyter
+RUN chmod 1777 /tmp; \
+    apt-get update; \
+    apt-get install --no-install-recommends --allow-unauthenticated -y \
+        pandoc \
+    ; \
+    apt-get clean; \
+    rm -rf /var/tmp /tmp /var/lib/apt/lists/*; \
+    mkdir /tmp
 
-ADD docker/notebook/custom.css /home/jovyan/.jupyter/custom
+ADD docker/notebook/custom.css /home/jovyan/.jupyter/custom/custom.css
 
