--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -1,14 +1,20 @@
-FROM rappdw/docker-ds:cpu-only
+FROM rappdw/docker-ds
 
 ADD requirements.txt /tmp/requirements.txt
 ADD docker/notebook/gen-latex.* /usr/local/bin/
 
 RUN chmod 1777 /tmp \
-    && apt-get update && apt-get install --no-install-recommends --allow-unauthenticated -y \
-    pandoc \
+    && apt-get update \
+    && apt-get install --no-install-recommends --allow-unauthenticated -y \
+        gcc \
+        linux-headers-4.9-amd64 \
+        libc6-dev \
+        pandoc \
     && pip install -r /tmp/requirements.txt \
     && mkdir -p /home/jovyan/.jupyter/custom \
-    && fix-permissions /home/jovyan/.jupyter
+    && fix-permissions /home/jovyan/.jupyter \
+    && apt-get clean \
+    && rm -rf /var/tmp/* /tmp/* /var/lib/apt/lists/*
 
 ADD docker/notebook/custom.css /home/jovyan/.jupyter/custom
 
