--- a/docker/dockerutils.cfg
+++ b/docker/dockerutils.cfg
@@ -1,14 +1,17 @@
 [notebook]
-volumes=-v {project_root}:/home/jovyan/project -v /data:/data --mount type=bind,source=/Users/{user}/.aws,target=/home/jovyan/.aws
+volumes=-v {project_root}:/home/jovyan/project --mount type=bind,source=/Users/{user}/.aws,target=/home/jovyan/.aws
 ports=-p 8888:8888
 env=lab
 
 [numba]
-volumes=-v {project_root}:/workdir -v /data:/data --mount type=bind,source=/Users/{user}/.aws,target=/project_root/.aws
+volumes=-v {project_root}:/workdir --mount type=bind,source=/Users/{user}/.aws,target=/project_root/.aws
 
 [lab]
 NOTEBOOK_MODE=lab
 
 [jenkins]
-volumes=-v {project_root}/dist:/workdir/dist -v {project_root}/.git:/workdir/.git:ro -v /data:/data -v {project_root}/_testing_output:/workdir/_testing_output
+volumes=-v {project_root}/dist:/workdir/dist -v {project_root}/.git:/workdir/.git:ro -v {project_root}/_testing_output:/workdir/_testing_output
 cmd=/bin/bash
+
+[build]
+volumes=-v {project_root}:/workdir
