--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ redblackgraph/core/src/multiarray/redblack.c
 redblackgraph/core/src/multiarray/rbg_math.c
 redblackgraph/core/src/multiarray/rbg_math.h
 redblackgraph/core/src/multiarray/relational_composition.c
+redblackgraph/core/src/multiarray/transitive_closure.c
 redblackgraph/core/src/multiarray/warshall.c
 redblackgraph/__config__.py
 redblackgraph/*.so
