--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -2,15 +2,15 @@ FROM rappdw/docker-ds
 
 ADD docker/notebook/gen-latex.* /usr/local/bin/
 
-RUN chmod 1777 /tmp; \
-    apt-get update; \
+RUN apt-get update; \
     apt-get install --no-install-recommends --allow-unauthenticated -y \
         gcc \
         g++ \
         linux-headers-4.9-amd64 \
         libc6-dev \
-        pandoc \
     ; \
+    wget -q https://github.com/jgm/pandoc/releases/download/1.19.2.1/pandoc-1.19.2.1-1-amd64.deb; \
+    dpkg -i pandoc-1.19.2.1-1-amd64.deb; \
     pip install -r /tmp/requirements.txt; \
     mkdir -p /home/jovyan/.jupyter/custom; \
     fix-permissions /home/jovyan/.jupyter; \
