--- a/docker/dockerutils.cfg
+++ b/docker/dockerutils.cfg
@@ -1,5 +1,6 @@
 [notebook]
 volumes=-v {project_root}:/home/jovyan/project --mount type=bind,source=/Users/{user}/.aws,target=/home/jovyan/.aws
+volumes_docked=-v /data:/data -v /data/workspaces/{user}/home:/user-home -v /data/workspaces/{user}/code/{project}:/workdir
 ports=-p 8888:8888
 env=lab
 
