--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -1,12 +1,14 @@
-FROM rappdw/docker-ds
+FROM resero/docker-ds
 
 ADD docker/notebook/gen-latex.* /usr/local/bin/
+ADD requirements.txt /tmp/
 
-RUN apt-get update; \
+RUN set -e; \
+    apt-get update; \
     apt-get install --no-install-recommends --allow-unauthenticated -y \
         gcc \
         g++ \
-        linux-headers-4.9-amd64 \
+        linux-headers-amd64 \
         libc6-dev \
     ; \
     wget -q https://github.com/jgm/pandoc/releases/download/1.19.2.1/pandoc-1.19.2.1-1-amd64.deb; \
