--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
   - pip install codecov
   - pip install -e ".[test]"
 script:
-  - bin/test.sh
+  - bin/test.sh -i
 after_success:
   - codecov
