Add cycle detection to Warshall algorithm Configure coverage to ignore setup.py's and tooling

--- a/coverage.cfg
+++ b/coverage.cfg
@@ -1,2 +1,9 @@
 [run]
-omit = redblackgraph/tests/*, redblackgraph/_version.py, redblackgraph/generate_sparsetools.py
+omit =
+    redblackgraph/tests/*,
+    redblackgraph/_version.py,
+    redblackgraph/sparse/generate_sparsetools.py,
+    redblackgraph/core/setup.py,
+    redblackgraph/setup.py,
+    redblackgraph/sparse/setup.py,
+    redblackgraph/core/__init__.py
