--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
   - "3.6"
 install:
   - pip install codecov
+  - pip install cython
   - pip install -e ".[test]"
 script:
   - bin/test -u
