Exclude setup from coverage

--- a/coverage.cfg
+++ b/coverage.cfg
@@ -7,3 +7,4 @@ omit =
     redblackgraph/setup.py,
     redblackgraph/sparse/setup.py,
     redblackgraph/core/__init__.py
+    redblackgraph/sparse/csgraph/setup.py
