--- a/coverage.cfg
+++ b/coverage.cfg
@@ -1,30 +1,10 @@
 [run]
-branch = True
 omit =
-    */__config__.py,
-    */setup.py,
-    */_version.py,
-    */generate_sparsetools.py,
-
-[report]
-# Regexes for lines to exclude from consideration
-exclude_lines =
-    # Have to re-enable the standard pragma
-    pragma: no cover
-
-    # Don't complain about missing debug-only code:
-    def __repr__
-    if self\.debug
-
-    # Don't complain if tests don't hit defensive assertion code:
-    raise AssertionError
-    raise NotImplementedError
-
-    # Don't complain if non-runnable code isn't run:
-    if 0:
-    if __name__ == .__main__.:
-
-ignore_errors = True
-
-[html]
-directory = coverage_html_report
+    redblackgraph/tests/*,
+    redblackgraph/_version.py,
+    redblackgraph/sparse/generate_sparsetools.py,
+    redblackgraph/core/setup.py,
+    redblackgraph/setup.py,
+    redblackgraph/sparse/setup.py,
+    redblackgraph/core/__init__.py
+    redblackgraph/sparse/csgraph/setup.py
