Mig_Phase1_Sprint2 task_2.1: Update dependency constraints
Updated all dependency files for Python 3.10+:

setup.py:
- Python requires: >=3.10 (was >=3.6)
- Removed dataclasses conditional dependency
- NumPy: >=1.26.0,<2.0 (was >=0.14.0)
- SciPy: >=1.11.0 (was no constraint)
- Cython: >=3.0 (was no constraint)
- Added setuptools<60.0 for numpy.distutils compatibility
- Updated classifiers: removed 3.5-3.9, kept 3.10, added 3.11, 3.12

requirements.txt:
- Removed dataclasses line
- Updated numpy and scipy constraints

requirements-dev.txt:
- Added setuptools<60.0
- Added cython>=3.0

.travis.yml:
- Updated Python versions: 3.12, 3.11, 3.10 (was 3.8, 3.7, 3.6)
- Updated dist: jammy (was xenial)
- Updated Cython install constraint

README.md:
- Updated Python version badges to 3.12, 3.11, 3.10

Build Status: ✅ Successful on Python 3.10
Import Status: ⚠️ SciPy 1.15 compatibility issue discovered (Sprint 3)

Related to: Task 2.1, Sprint 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: python
 sudo: true
-dist: xenial
+dist: jammy
 python:
-  - "3.8"
-  - "3.7"
-  - "3.6"
+  - "3.12"
+  - "3.11"
+  - "3.10"
 install:
   - pip install codecov
-  - pip install cython
+  - pip install "cython>=3.0"
   - pip install -e ".[test]"
 script:
   - bin/test -u
