Mig_Phase1_Sprint2: Sprint completion and scope adjustment
Sprint 2 completed with scope adjustment:
- Python 3.10: ✅ Fully working
- Python 3.11: ✅ Fully working
- Python 3.12: ❌ Blocked (deferred to Phase 2)

Python 3.12 Blocker:
Python 3.12 removed distutils from stdlib. numpy.distutils cannot
function without it, and setuptools<60.0 doesn't provide shim for 3.12+.
Per ADR-004, Phase 1 keeps numpy.distutils, so Python 3.12 requires
Phase 2 Meson migration.

Updated Files:
- .travis.yml: Removed Python 3.12, added comment explaining block
- README.md: Removed Python 3.12 badge (only show 3.10, 3.11)
- Added sprint2_completion_summary.md documenting all changes

Decision: Accept Python 3.10-3.11 as Phase 1 scope, defer 3.12 to Phase 2.

Build Status:
- Python 3.10: ✅ Build + Import successful
- Python 3.11: ✅ Build + Import successful
- Python 3.12: ❌ Build blocked (ModuleNotFoundError: distutils)

Related to: Sprint 2 completion, ADR-008

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 sudo: true
 dist: jammy
 python:
-  - "3.12"
   - "3.11"
   - "3.10"
+  # Python 3.12 blocked until Phase 2 Meson migration (distutils removed from stdlib)
 install:
   - pip install codecov
   - pip install "cython>=3.0"
