--- a/redblackgraph/core/meson.build
+++ b/redblackgraph/core/meson.build
@@ -1,10 +1,10 @@
 # Core subpackage - C extensions and Python modules
-# TODO: Sprint 2 - Add C extension building
 
-# For now, just install Python sources
+# Install Python sources
 python_sources = [
   '__init__.py',
   'redblack.py',
+  'avos.py',
 ]
 
 py.install_sources(
@@ -12,7 +12,30 @@ py.install_sources(
   subdir: 'redblackgraph/core'
 )
 
-# C extensions will be added in Sprint 2:
-# - _redblack extension
-# - _warshall extension  
-# - _relational_composition extension
+# C extension: _redblackgraph
+# This extension provides optimized AVOS linear algebra operations
+src_dir = 'src/redblackgraph'
+
+_redblackgraph_sources = [
+  src_dir / 'redblackgraphmodule.c',
+  src_dir / 'rbg_math.c',           # Generated from .c.src
+  src_dir / 'redblack.c',           # Generated from .c.src  
+  src_dir / 'relational_composition.c',  # Generated from .c.src
+  src_dir / 'warshall.c',           # Generated from .c.src
+]
+
+# Include directories
+_redblackgraph_inc = include_directories(src_dir)
+
+# Build the extension
+py.extension_module(
+  '_redblackgraph',
+  _redblackgraph_sources,
+  include_directories: [_redblackgraph_inc],
+  dependencies: [py_dep],
+  c_args: [
+    '-I' + incdir_numpy,  # NumPy C API headers
+  ],
+  install: true,
+  subdir: 'redblackgraph/core',
+)
