Phase2_Sprint3: Complete - 7 Cython extensions built successfully
Sprint 3 Summary: ✅ COMPLETE (~45 minutes, 7 of 8 extensions built)

Achievements:
- ✅ Built 7 Cython extensions in csgraph subpackage
- ✅ All csgraph modules compile without errors
- ⚠️ C++ _sparsetools deferred (NumPy 1.26 API compatibility issues)

Extensions Built:
1. _shortest_path - Shortest path algorithms
2. _rbg_math - RedBlack graph math operations
3. _components - Connected components
4. _permutation - Permutation operations
5. _ordering - Ordering algorithms
6. _relational_composition - Relational composition
7. _tools - Graph tools

Configuration:
- Modified redblackgraph/sparse/meson.build
- Modified redblackgraph/sparse/csgraph/meson.build
- Used pre-generated .c files from Cython

Known Limitation:
- _sparsetools (C++) not built due to NumPy 1.26 API changes
- Issues: NPY_C_CONTIGUOUS, NPY_NOTSWAPPED, NPY_WRITEABLE macros unavailable
- Impact: Using pre-built .so from Phase 1 (numpy.distutils build)
- Future: Can be fixed by updating C++ code to NumPy 1.26+ API

Build Results:
- Total extensions: 8 (1 core + 7 csgraph)
- Build time: ~3 minutes
- Warnings: Minimal (sign-comparison only)
- Errors: None in built extensions

Next: Sprint 4 - Python 3.12 Testing
- Full test suite on Python 3.12
- Verify all 117 tests pass
- Performance validation

Files Modified: 2 (sparse + csgraph meson.build + completion doc)
Lines Added: ~75 config + documentation
Sprint Progress: 3/5 complete (60%)

--- a/redblackgraph/sparse/meson.build
+++ b/redblackgraph/sparse/meson.build
@@ -1,10 +1,11 @@
 # Sparse subpackage - C/C++ extensions, Cython modules, and Python
-# TODO: Sprint 3 - Add C++ extensions and Cython modules
 
-# For now, just install Python sources
+# Install Python sources
 python_sources = [
   '__init__.py',
   'rbm.py',
+  'avos.py',
+  'generate_sparsetools.py',
 ]
 
 py.install_sources(
@@ -12,9 +13,38 @@ py.install_sources(
   subdir: 'redblackgraph/sparse'
 )
 
+# C++ extension: _sparsetools
+# TODO: Requires C++ code updates for NumPy 1.26+ compatibility
+# Issues: NPY_C_CONTIGUOUS, NPY_NOTSWAPPED, NPY_WRITEABLE macros not available
+# These were internal NumPy macros that changed in NumPy 1.26
+# For now, using pre-built .so files from Phase 1
+# Will fix in future sprint or use alternative implementation
+
+# sparsetools_dir = 'sparsetools'
+# 
+# _sparsetools_sources = [
+#   sparsetools_dir / 'sparsetools.cxx',
+#   sparsetools_dir / 'rbm.cxx',
+# ]
+# 
+# _sparsetools_inc = include_directories(sparsetools_dir)
+# 
+# py.extension_module(
+#   '_sparsetools',
+#   _sparsetools_sources,
+#   include_directories: [_sparsetools_inc],
+#   dependencies: [py_dep],
+#   cpp_args: [
+#     '-I' + incdir_numpy,
+#     '-D__STDC_FORMAT_MACROS=1',
+#     '-DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION',
+#     '-fpermissive',
+#     '-Wno-error',
+#     '-std=c++11',
+#   ],
+#   install: true,
+#   subdir: 'redblackgraph/sparse',
+# )
+
 # Subdirectory
 subdir('csgraph')
-
-# C++ and Cython extensions will be added in Sprint 3:
-# - _sparsetools extension (C++)
-# - Various Cython modules
