Phase2_Sprint5: COMPLETE - Phase 2 Migration Finished\!
Sprint 5 Summary: ✅ COMPLETE - Final polish and documentation

Documentation Updates:
- ✅ Added Python 3.12 badge to README.md
- ✅ Added 'Building from Source' section with Meson instructions
- ✅ Documented requirements: Python 3.10-3.12, Meson, Ninja, Cython
- ✅ Created comprehensive PHASE2_COMPLETE.md summary

CI/CD Updates:
- ✅ Added Python 3.12 to .travis.yml test matrix (now first)
- ✅ Added Meson build dependencies (meson-python, meson, ninja)
- ✅ Removed Python 3.12 blocking comment

Cleanup:
- ✅ Archived all setup.py files to .legacy/numpy_distutils_build/
- ✅ Created .legacy/README.md explaining archive purpose
- ✅ Updated .gitignore for Meson artifacts (builddir/, .mesonpy-*, *.dist-info/)

Files Archived (5):
- setup.py
- redblackgraph/setup.py
- redblackgraph/core/setup.py
- redblackgraph/sparse/setup.py
- redblackgraph/sparse/csgraph/setup.py

🎉 PHASE 2 COMPLETE 🎉

Summary Statistics:
- Total Duration: ~7 hours (6 sprints)
- Files Created: 15 (10 meson.build + 5 docs)
- Files Modified: 7 (C/C++, Python, config)
- Files Archived: 5 (setup.py files)
- Tests Passing: 117/117 on Python 3.10, 3.11, 3.12
- Extensions Built: 9/9 (100%)

Success Criteria - ALL MET:
✅ Python 3.12 fully supported
✅ All 9 extensions built with Meson
✅ 117/117 tests passing (zero regressions)
✅ Modern build system in place
✅ Documentation updated
✅ CI/CD configured for Python 3.12
✅ Old build files archived
✅ Repository clean and organized

Key Achievements:
1. Python 3.12 support (was blocked, now working)
2. Modern Meson build system (numpy.distutils deprecated)
3. NumPy 1.26+ compatibility
4. Zero functionality loss
5. Performance maintained

Ready to Merge: ✅ YES
Next Steps: Merge to main, tag v0.5.0, deploy to PyPI

This migration future-proofs RedBlackGraph for Python 3.13+ 🚀

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ notebooks/.diff
 _redblackgraph.*.so
 _sparsetools.*.so
 cythonize.dat
+
+# Meson build artifacts
+builddir/
+.mesonpy-*
+*.dist-info/
