--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ master, main, develop ]
+    branches: [ master, main, develop, feature/github-actions-ci ]
   pull_request:
     branches: [ master, main ]
   workflow_dispatch:
