--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
       
+      - name: Generate __config__.py
+        run: python generate_config.py
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -61,6 +64,9 @@ jobs:
           key: ${{ runner.os }}-py${{ matrix.python-version }}-pip-${{ hashFiles('**/pyproject.toml', '**/requirements*.txt') }}
           restore-keys: |
             ${{ runner.os }}-py${{ matrix.python-version }}-pip-
+      
+      - name: Generate __config__.py
+        run: python generate_config.py
       
       - name: Install build dependencies
         run: |
@@ -119,7 +125,7 @@ jobs:
       
       - name: Upload coverage report artifact
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: coverage-report-py${{ matrix.python-version }}
           path: |
@@ -129,7 +135,7 @@ jobs:
       
       - name: Upload test results
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: test-results-py${{ matrix.python-version }}
           path: _testing_output/
@@ -147,7 +153,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Download coverage report
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: coverage-report-py3.12
       
