--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -33,6 +33,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-py${{ matrix.python-version }}-pip-
       
+      - name: Generate __config__.py
+        run: python generate_config.py
+      
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
@@ -65,7 +68,7 @@ jobs:
       
       - name: Upload coverage report artifact
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: integration-coverage-py${{ matrix.python-version }}
           path: |
@@ -75,7 +78,7 @@ jobs:
       
       - name: Upload test results
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: integration-results-py${{ matrix.python-version }}
           path: _testing_output/
