--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           python-version: '3.12'
       
+      - name: Generate __config__.py
+        run: python generate_config.py
+      
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
@@ -35,7 +38,7 @@ jobs:
         run: python -m build --sdist
       
       - name: Upload sdist artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: sdist
           path: dist/*.tar.gz
@@ -57,6 +60,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       
+      - name: Generate __config__.py
+        run: python generate_config.py
+      
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
@@ -70,7 +76,7 @@ jobs:
         run: python -m build --wheel
       
       - name: Upload wheel artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: wheels-${{ matrix.os }}-py${{ matrix.python-version }}
           path: dist/*.whl
@@ -88,7 +94,7 @@ jobs:
           python-version: '3.12'
       
       - name: Download all wheels
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           path: dist/
       
@@ -115,7 +121,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           path: dist/
       
@@ -144,7 +150,7 @@ jobs:
     
     steps:
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           path: dist/
       
