Phase 1 COMPLETE: Tempita POC - rbg_math.h template conversion
✅ Tempita installed in all Python venvs (3.10, 3.11, 3.12)
✅ Created tools/tempita_processor.py wrapper
✅ Converted rbg_math.h.src → rbg_math.h.in (Tempita syntax)
✅ Updated pyproject.toml to require tempita>=0.5.2
✅ Updated meson.build to generate header from template
✅ Verified generated output matches original (content identical)
✅ Build succeeds with Tempita template generation
✅ 18 core tests passing

Generated header is functionally equivalent to original.
Template processor working correctly.
Build system integration complete.

Ready for Phase 2: Convert simple C files (rbg_math.c, warshall.c)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires = [
     "meson>=1.2.0",
     "ninja",
     "Cython>=3.0.0",
+    "tempita>=0.5.2",  # For template processing (.c.in, .h.in files)
     # NumPy is needed at build time for C API headers
     "numpy>=1.26.0,<2.0",
 ]
