--- a/redblackgraph/core/meson.build
+++ b/redblackgraph/core/meson.build
@@ -16,16 +16,30 @@ py.install_sources(
 # This extension provides optimized AVOS linear algebra operations
 src_dir = 'src/redblackgraph'
 
+# Tempita processor for template files
+tempita_processor = find_program('../../tools/tempita_processor.py')
+
+# Generate rbg_math.h from Tempita template
+rbg_math_h = custom_target('rbg_math_h',
+  input: src_dir / 'rbg_math.h.in',
+  output: 'rbg_math.h',
+  command: [py, tempita_processor, '@INPUT@', '-o', '@OUTPUT@']
+)
+
 _redblackgraph_sources = [
   src_dir / 'redblackgraphmodule.c',
-  src_dir / 'rbg_math.c',           # Generated from .c.src
-  src_dir / 'redblack.c',           # Generated from .c.src  
-  src_dir / 'relational_composition.c',  # Generated from .c.src
-  src_dir / 'warshall.c',           # Generated from .c.src
+  src_dir / 'rbg_math.c',           # TODO: Convert from .c.src to .c.in (Phase 2)
+  src_dir / 'redblack.c',           # TODO: Convert from .c.src to .c.in (Phase 4)
+  src_dir / 'relational_composition.c',  # TODO: Convert from .c.src to .c.in (Phase 3)
+  src_dir / 'warshall.c',           # TODO: Convert from .c.src to .c.in (Phase 2)
+  rbg_math_h,                        # Generated header - forces generation before compilation
 ]
 
-# Include directories
-_redblackgraph_inc = include_directories(src_dir)
+# Include directories - need both source and build dirs for generated headers
+_redblackgraph_inc = [
+  include_directories(src_dir),
+  include_directories('.'),  # For generated rbg_math.h
+]
 
 # Build the extension
 py.extension_module(
