Phase 2 COMPLETE: Simple C file template conversions
✅ Converted rbg_math.c.src → rbg_math.c.in
✅ Converted warshall.c.src → warshall.c.in
✅ Updated meson.build to generate both C files from templates
✅ Build generates all 3 files correctly:
   - rbg_math.h (Phase 1)
   - rbg_math.c (Phase 2)
   - warshall.c (Phase 2)
✅ All 18 core tests passing
✅ No regressions

Both files use Tempita syntax with shared type_defs array.
warshall.c includes multiple repeat blocks (functions, arrays, signatures).
Generated code functionally equivalent to originals.

Progress: 3 of 5 files converted (60%)
Remaining: relational_composition.c (Phase 3), redblack.c (Phase 4)

--- a/redblackgraph/core/meson.build
+++ b/redblackgraph/core/meson.build
@@ -19,19 +19,31 @@ src_dir = 'src/redblackgraph'
 # Tempita processor for template files
 tempita_processor = find_program('../../tools/tempita_processor.py')
 
-# Generate rbg_math.h from Tempita template
+# Generate files from Tempita templates
 rbg_math_h = custom_target('rbg_math_h',
   input: src_dir / 'rbg_math.h.in',
   output: 'rbg_math.h',
   command: [py, tempita_processor, '@INPUT@', '-o', '@OUTPUT@']
 )
 
+rbg_math_c = custom_target('rbg_math_c',
+  input: src_dir / 'rbg_math.c.in',
+  output: 'rbg_math.c',
+  command: [py, tempita_processor, '@INPUT@', '-o', '@OUTPUT@']
+)
+
+warshall_c = custom_target('warshall_c',
+  input: src_dir / 'warshall.c.in',
+  output: 'warshall.c',
+  command: [py, tempita_processor, '@INPUT@', '-o', '@OUTPUT@']
+)
+
 _redblackgraph_sources = [
   src_dir / 'redblackgraphmodule.c',
-  src_dir / 'rbg_math.c',           # TODO: Convert from .c.src to .c.in (Phase 2)
+  rbg_math_c,                        # Generated from rbg_math.c.in (Phase 2 ✅)
   src_dir / 'redblack.c',           # TODO: Convert from .c.src to .c.in (Phase 4)
   src_dir / 'relational_composition.c',  # TODO: Convert from .c.src to .c.in (Phase 3)
-  src_dir / 'warshall.c',           # TODO: Convert from .c.src to .c.in (Phase 2)
+  warshall_c,                        # Generated from warshall.c.in (Phase 2 ✅)
   rbg_math_h,                        # Generated header - forces generation before compilation
 ]
 
