Phase 3 COMPLETE: Medium complexity template conversion
✅ Converted relational_composition.c.src → relational_composition.c.in
✅ Updated meson.build to generate relational_composition.c
✅ Build generates all 4 template files correctly:
   - rbg_math.h (Phase 1)
   - rbg_math.c (Phase 2)
   - warshall.c (Phase 2)
   - relational_composition.c (Phase 3)
✅ All 117 tests passing (full test suite)
✅ No regressions

File contained 7 repeat blocks with 6 functions:
- vector_avos helper
- edge_relational_composition + gufunc wrapper
- vertex_relational_composition + gufunc wrapper
- 6 array/signature repeat blocks

Added stype_num variable for vertex_relational_composition_signatures.
Generated code functionally equivalent to original.

Progress: 4 of 5 files converted (80%)
Remaining: redblack.c (Phase 4 - the big one)

--- a/redblackgraph/core/meson.build
+++ b/redblackgraph/core/meson.build
@@ -38,11 +38,17 @@ warshall_c = custom_target('warshall_c',
   command: [py, tempita_processor, '@INPUT@', '-o', '@OUTPUT@']
 )
 
+relational_composition_c = custom_target('relational_composition_c',
+  input: src_dir / 'relational_composition.c.in',
+  output: 'relational_composition.c',
+  command: [py, tempita_processor, '@INPUT@', '-o', '@OUTPUT@']
+)
+
 _redblackgraph_sources = [
   src_dir / 'redblackgraphmodule.c',
   rbg_math_c,                        # Generated from rbg_math.c.in (Phase 2 ✅)
   src_dir / 'redblack.c',           # TODO: Convert from .c.src to .c.in (Phase 4)
-  src_dir / 'relational_composition.c',  # TODO: Convert from .c.src to .c.in (Phase 3)
+  relational_composition_c,          # Generated from relational_composition.c.in (Phase 3 ✅)
   warshall_c,                        # Generated from warshall.c.in (Phase 2 ✅)
   rbg_math_h,                        # Generated header - forces generation before compilation
 ]
