CI: Add tempita to workflow build dependencies
✅ Updated all GitHub Actions workflows to include tempita>=0.5.2
✅ Required for template processing during build (.c.in, .h.in files)

Workflows updated:
- ci.yml: Main CI workflow with tests and coverage
- integration.yml: Integration test workflow
- release.yml: Release and PyPI publishing workflow

This ensures templates are properly processed during:
- Regular CI builds
- Integration tests
- Release builds (sdist and wheels)

Tempita is already in pyproject.toml build-system.requires, but
workflows install deps manually before pip install, so we add it
explicitly to ensure it's available for meson build.

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -43,6 +43,7 @@ jobs:
           pip install meson>=1.2.0
           pip install ninja
           pip install cython>=3.0
+          pip install tempita>=0.5.2  # Required for template processing
       
       - name: Install project with test dependencies
         run: |
