FIX: Configure Cython to generate .c files from .pyx during build
🐛 Fixed GitHub Actions CI failure: 'File _shortest_path.c does not exist'

ROOT CAUSE:
- Cython-generated .c files exist locally but not in git
- meson.build was looking for pre-generated .c files
- CI had no .c files to build from

SOLUTION:
1. Added 'cython' as project language in main meson.build
2. Changed csgraph/meson.build to use .pyx source files instead of .c
3. Meson now runs Cython to generate .c during build

CHANGES:
- meson.build: Added 'cython' to project languages
- redblackgraph/sparse/csgraph/meson.build:
  * Changed ext_name + '.c' → ext_name + '.pyx'
  * Updated comments to reflect build-time generation

VALIDATION:
✅ All 117 tests passing locally
✅ Cython properly compiles all 7 .pyx files:
   - _shortest_path.pyx
   - _rbg_math.pyx
   - _components.pyx
   - _permutation.pyx
   - _ordering.pyx
   - _relational_composition.pyx
   - _tools.pyx

This should now work in GitHub Actions CI since Cython is already
installed as a build dependency (cython>=3.0).

--- a/redblackgraph/sparse/csgraph/meson.build
+++ b/redblackgraph/sparse/csgraph/meson.build
@@ -13,9 +13,7 @@ py.install_sources(
   subdir: 'redblackgraph/sparse/csgraph'
 )
 
-# Cython extensions (using pre-generated .c files)
-# Each extension is built from .pyx → .c (already generated)
-
+# Cython extensions - generate .c from .pyx during build
 cython_extensions = [
   '_shortest_path',
   '_rbg_math',
@@ -29,7 +27,7 @@ cython_extensions = [
 foreach ext_name : cython_extensions
   py.extension_module(
     ext_name,
-    ext_name + '.c',
+    ext_name + '.pyx',  # Use .pyx source, Cython will generate .c
     dependencies: [py_dep],
     c_args: [
       '-I' + incdir_numpy,
