FIX: Use --no-build-isolation for editable installs
🐛 Fixed GitHub Actions CI: meson-python editable install rebuild issue

ROOT CAUSE:
- pip install -e . with build isolation puts ninja in temp build env
- meson-python editable install creates rebuild hook on import
- When tests import redblackgraph, rebuild tries to run ninja
- ninja not found in PATH → FileNotFoundError

ERROR:
FileNotFoundError: /tmp/pip-build-env-*/overlay/bin/ninja

SOLUTION:
Use --no-build-isolation for editable installs:
- Build dependencies (ninja, meson, cython, tempita) installed in main env
- Available in PATH for meson-python rebuild hook
- Editable imports work correctly

CHANGES:
- ci.yml: Added --no-build-isolation to both lint and test jobs
- ci.yml: Added build deps to lint job (was missing)
- integration.yml: Added --no-build-isolation to test install

VALIDATION:
✅ Tested locally with isolated environment
✅ Build dependencies explicitly installed before editable install
✅ All imports should work in CI now

Note: release.yml doesn't need this (builds wheels, not editable)

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -47,7 +47,7 @@ jobs:
       
       - name: Install project with test dependencies
         run: |
-          pip install -e ".[test]"
+          pip install -e ".[test]" --no-build-isolation
       
       - name: Create output directory
         run: mkdir -p _testing_output
