--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install meson-python>=0.15.0
+          pip install meson>=1.2.0
+          pip install ninja
+          pip install cython>=3.0
+          pip install tempita>=0.5.2
           pip install pylint
-          pip install -e .
+          pip install -e . --no-build-isolation
       
       - name: Run pylint
         run: |
@@ -79,7 +84,7 @@ jobs:
       
       - name: Install project with test dependencies
         run: |
-          pip install -e ".[test]"
+          pip install -e ".[test]" --no-build-isolation
       
       - name: Create output directory
         run: mkdir -p _testing_output
