--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install numpy>=1.26.0
           pip install meson-python>=0.15.0
           pip install meson>=1.2.0
           pip install ninja
@@ -76,6 +77,7 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install numpy>=1.26.0
           pip install meson-python>=0.15.0
           pip install meson>=1.2.0
           pip install ninja
