Clean up: Remove feature branch from CI triggers
✅ CI is now working\! Remove temporary feature branch trigger.

CHANGES:
- Removed 'feature/github-actions-ci' from push branches
- Keep only: master, main, develop
- CI is fully functional and passing all tests

The GitHub Actions CI migration is complete\! 🎉

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ master, main, develop, feature/github-actions-ci ]
+    branches: [ master, main, develop ]
   pull_request:
     branches: [ master, main ]
   workflow_dispatch:
