Improve .gitignore patterns for venvs and build dirs
- Changed .venv → .venv* to catch all versioned venvs
  (.venv-3.10, .venv-3.11, .venv-3.12, etc.)
- Changed builddir/ → builddir* to catch all variations
- Explicitly added build/ to Meson section for clarity

These patterns now properly exclude all development artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 activate
 .idea
 .vscode
-.venv
+.venv*
 dist/
 build/
 .cache/
@@ -44,6 +44,7 @@ _sparsetools.*.so
 cythonize.dat
 
 # Meson build artifacts
-builddir/
+build/
+builddir*
 .mesonpy-*
 *.dist-info/
